Archive2/e2/56a5dd98f5e0bc/output
main.cpp:1:1: error: expected unqualified-id before 'try'
 try {
 ^
main.cpp:5:1: error: expected unqualified-id before 'catch'
 catch (...) {
 ^
