Archive2/e2/56a5dd98f5e0bc/main.cpp
try {
    some_throwing_func();
    return;
}
catch (...) {
    try {
        anotherThrowingFunc();
        return;
    }
    catch (...) {}
    throw;
}